--- a/gradle.properties
+++ b/gradle.properties
@@ -3,18 +3,18 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=1.19.3
-	yarn_mappings=1.19.3+build.5
-	loader_version=0.14.13
+	minecraft_version=1.19.4
+	yarn_mappings=1.19.4+build.2
+	loader_version=0.14.21
 
 # Mod Properties
-	mod_version = 0.2.0
+	mod_version = 0.2.0+1.19.4
 	maven_group = com.minenash
 	archives_base_name = action_hunger
 
 # Dependencies
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.73.0+1.19.3
+	fabric_version=0.83.0+1.19.4
 
 	# Optional
 #	bewitchment_version=4048571
