--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,18 +4,14 @@
 # against bad commits.
 
 name: build
-on: [pull_request, push]
+on: [pull_request, push, workflow_dispatch]
 
 jobs:
   build:
     strategy:
       matrix:
         # Use these Java versions
-        java: [
-          1.8,  # Minimum supported by Minecraft
-          11,   # Current Java LTS
-          15    # Latest version
-        ]
+        java: [21]
         # and run on both Linux and Windows
         os: [ubuntu-20.04, windows-latest]
     runs-on: ${{ matrix.os }}
